<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/section_preference_default"
        android:entries="@array/settings_filter_section_labels"
        android:entryValues="@array/settings_filter_section_values"
        android:key="@string/section_preference_key"
        android:title="@string/section_preference_label"/>

    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/order_by_key"
        android:title="@string/order_by_label"/>

</PreferenceScreen>